[tool.poetry]
name = "pygame-samples"
version = "0.1.0"
description = ""
authors = ["ha810ta222 <ha810ta222@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
